--- a/pricing.html
+++ b/pricing.html
@@ -5,74 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pricing - StreamSync</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
-    
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="lookslike spotify.html">StreamSync</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="lookslike spotify.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="pricing.html">Pricing</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    
-    <div class="container">
-        <div class="row">
-            <div class="col-12 text-center">
-                <h1 class="about-text">Pricing Plans</h1>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="lookslike spotify.html">StreamSync</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="lookslike spotify.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pricing.html">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                </ul>
             </div>
         </div>
+    </nav>
+
+    <div class="container text-white">
+        <h2 class="mb-4 text-center"><i class="bi bi-cash"></i> Pricing Plans</h2>
+        <p class="text-center">Choose a plan that suits your needs:</p>
+
         <div class="row">
-            <div class="col-md-6">
-                <div class="card mb-4">
+            <div class="col-md-6 mb-4">
+                <div class="card bg-dark text-white">
                     <div class="card-header">
-                        <h4>Basic</h4>
+                        <h5 class="my-0">Basic Plan <i class="bi bi-star"></i></h5>
                     </div>
                     <div class="card-body">
                         <h1 class="card-title pricing-card-title">$10 <small class="text-muted">/ mo</small></h1>
                         <ul class="list-unstyled mt-3 mb-4">
-                            <li>5 users included</li>
-                            <li>5 GB of storage</li>
-                            <li>Email support</li>
+                            <li><i class="bi bi-person-fill"></i> 1 User</li>
+                            <li><i class="bi bi-archive"></i> 5 GB of Storage</li>
+                            <li><i class="bi bi-envelope-fill"></i> Email Support</li>
                         </ul>
-                        <button type="button" class="btn btn-lg btn-block btn-primary">Get Started</button>
+                        <button type="button" class="btn btn-primary">Get Started</button>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
-                <div class="card mb-4">
+            <div class="col-md-6 mb-4">
+                <div class="card bg-dark text-white">
                     <div class="card-header">
-                        <h4>Premium</h4>
+                        <h5 class="my-0">Premium Plan <i class="bi bi-star-fill"></i></h5>
                     </div>
                     <div class="card-body">
-                        <h1 class="card-title pricing-card-title">$25 <small class="text-muted">/ mo</small></h1>
+                        <h1 class="card-title pricing-card-title">$20 <small class="text-muted">/ mo</small></h1>
                         <ul class="list-unstyled mt-3 mb-4">
-                            <li>20 users included</li>
-                            <li>10 GB of storage</li>
-                            <li>Priority email support</li>
+                            <li><i class="bi bi-person-fill"></i> Up to 5 Users</li>
+                            <li><i class="bi bi-archive"></i> 15 GB of Storage</li>
+                            <li><i class="bi bi-phone-fill"></i> Priority Support</li>
                         </ul>
-                        <button type="button" class="btn btn-lg btn-block btn-primary">Get Started</button>
+                        <button type="button" class="btn btn-primary">Get Started</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
