--- a/pages/about.html
+++ b/pages/about.html
@@ -37,7 +37,7 @@
 			</div>
 		</nav>
 
-    <div class="container text-white">
+    <div class="container text-black">
         <h2 class="mb-4"><i class="bi bi-info-circle"></i> About Us</h2>
         <p>Welcome to StreamSync! We are passionate about music and technology, dedicated to creating an unparalleled streaming experience for our users.</p>
 
