--- a/pages/generate.html
+++ b/pages/generate.html
@@ -39,17 +39,20 @@
 				</div>
 			</div>
 		</nav>
+
+		<div class="container d-flex align-items-center justify-content-center" style="min-height: 100vh;">
+	        <div class="card shadow" style="width: 400px;">
+	            <div class="card-body">
+	                <div class="text-center m-3">
+	                	<button class="btn btn-success p-3" id="generateBtn">Generate Playlist</button>
+	                </div>
+	            </div>
+	        </div>
+    	</div>
 		
-		<div class="graph">
-			<div class="node central">StreamSync</div>
-			<div class="node" id="node1i">Spotify</div>
-			<div class="node" id="node2i">Apple Music</div>
-			<div class="node" id="node3i">Tencent Music</div>
-			<div class="node" id="node4i">Amazon Music</div>
-			<div class="node" id="node5i">Youtube Music</div>
-		</div>
-		
-		<script src="../scripts/script.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+		<!-- add a button to watch an add to generate another playlist -->
+
+    	<script src="../scripts/generateScript.js"></script>
+    	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 	</body>
 </html>
