--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -24,6 +24,9 @@
 						<li class="nav-item">
 							<a class="nav-link" href="index.html">Home</a>
 						</li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="generate.html">Generate</a>
+                        </li>
 						<li class="nav-item">
 							<a class="nav-link" href="pricing.html">Pricing</a>
 						</li>
