--- a/pages/index.html
+++ b/pages/index.html
@@ -42,11 +42,11 @@
 		
 		<div class="graph">
 			<div class="node central">StreamSync</div>
-			<div class="node" id="node1i">Spotify</div>
-			<div class="node" id="node2i">Apple Music</div>
-			<div class="node" id="node3i">Tencent Music</div>
-			<div class="node" id="node4i">Amazon Music</div>
-			<div class="node" id="node5i">Youtube Music</div>
+			<div class="node" id="node1">Spotify</div>
+			<div class="node" id="node2">Apple Music</div>
+			<div class="node" id="node3">Tencent Music</div>
+			<div class="node" id="node4">Amazon Music</div>
+			<div class="node" id="node5">Youtube Music</div>
 		</div>
 		
 		<script src="../scripts/script.js"></script>
