--- a/pages/about.html
+++ b/pages/about.html
@@ -14,7 +14,7 @@
 <body>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
 			<div class="container-fluid">
-				<a class="navbar-brand cinzel-main" href="index.html">StreamSync</a>
+				<a class="navbar-brand cinzel-nav-main" href="index.html">StreamSync</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
@@ -41,16 +41,16 @@
 		</nav>
 
     <div class="container text-white">
-        <h2 class="mb-4"><i class="bi bi-info-circle"></i> About Us</h2>
+        <h2 class="mb-4 cinzel-heading"><i class="bi bi-info-circle"></i> About Us</h2>
         <p>Welcome to StreamSync! We are passionate about music and technology, dedicated to creating an unparalleled streaming experience for our users.</p>
 
-        <h3 class="mt-4"><i class="bi bi-bullseye"></i> Our Mission</h3>
+        <h3 class="mt-4 cinzel-heading"><i class="bi bi-bullseye"></i> Our Mission</h3>
         <p>Our mission is to provide a seamless experience across your favorite music streaming platforms. We aim to bridge the gap between various streaming services, allowing users to enjoy their music without limitations.</p>
 
-        <h3 class="mt-4"><i class="bi bi-eye"></i> Our Vision</h3>
+        <h3 class="mt-4 cinzel-heading"><i class="bi bi-eye"></i> Our Vision</h3>
         <p>We envision a world where music is effortlessly accessible, connecting people through shared experiences and diverse genres.</p>
 
-        <h3 class="mt-4"><i class="bi bi-trophy"></i> What We Offer</h3>
+        <h3 class="mt-4 cinzel-heading"><i class="bi bi-trophy"></i> What We Offer</h3>
         <ul>
             <li><i class="bi bi-music-note"></i> Custom algorithm to create comprehensive reccomendations</li>
             <li><i class="bi bi-list-check"></i> Customizable playlists and thorough curation</li>
@@ -58,10 +58,10 @@
             
         </ul>
 
-        <h3 class="mt-4"><i class="bi bi-person-plus-fill"></i> Join Us</h3>
+        <h3 class="mt-4 cinzel-heading"><i class="bi bi-person-plus-fill"></i> Join Us</h3>
         <p>Join us on this musical journey! Whether you're a casual listener or a dedicated audiophile, StreamSync has something for everyone. Sign up today and experience music like never before!</p>
 
-        <h3 class="mt-4"><i class="bi bi-envelope-fill"></i> Contact Us</h3>
+        <h3 class="mt-4 cinzel-heading"><i class="bi bi-envelope-fill"></i> Contact Us</h3>
         <p>For any inquiries, feel free to reach out using the form below:</p>
 
         <div class="card bg-dark text-white mt-4">
