--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -15,7 +15,7 @@
     
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
 			<div class="container-fluid">
-				<a class="navbar-brand cinzel-main" href="index.html">StreamSync</a>
+				<a class="navbar-brand cinzel-nav-main" href="index.html">StreamSync</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
@@ -54,7 +54,7 @@
                         <h4>Basic</h4>
                     </div>
                     <div class="card-body">
-                        <h1 class="card-title pricing-card-title">Free of Charge</h1>
+                        <h1 class="card-title pricing-card-title cinzel-heading">Free of Charge</h1>
                         <ul class="list-unstyled mt-3 mb-4">
                             <li>1 playlist per week</li>
                             <li>Watch an ad for an extra playlist once weekly</li>
@@ -70,7 +70,7 @@
                         <h4>Premium</h4>
                     </div>
                     <div class="card-body">
-                        <h1 class="card-title pricing-card-title">$10 <small class="text-muted">/ mo</small></h1>
+                        <h1 class="card-title pricing-card-title cinzel-heading">$10 <small class="text-muted cinzel-heading">/ mo</small></h1>
                         <ul class="list-unstyled mt-3 mb-4">
                             <li>Daily playlists</li>
                             <li>No ads</li>
