--- a/pages/create-account.html
+++ b/pages/create-account.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Account - StreamSync</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../style.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&display=swap" rel="stylesheet">
-</head>
-<body>
-
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Create Account - StreamSync</title>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="../style.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&display=swap" rel="stylesheet">
+	</head>
+	<body>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
 			<div class="container-fluid">
 				<a class="navbar-brand cinzel-nav-main" href="index.html">StreamSync</a>
@@ -40,33 +39,33 @@
 			</div>
 		</nav>
 
-    <div class="container d-flex align-items-center justify-content-center" style="min-height: 100vh;">
-        <div class="card shadow" style="width: 400px;">
-            <div class="card-body">
-                <h2 class="text-center mb-4">Create Your Account</h2>
-                <form id="createAccountForm">
-                    <div class="mb-3">
-                        <label for="newUsername" class="form-label">Username</label>
-                        <input type="text" class="form-control" id="newUsername" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="newPassword" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="newPassword" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="confirmPassword" class="form-label">Confirm Password</label>
-                        <input type="password" class="form-control" id="confirmPassword" required>
-                    </div>
-                    <button type="submit" class="btn btn-success w-100" id="createAccountBtn">Create Account</button>
-                </form>
-                <div class="text-center mt-3">
-                    <p class="mb-0">Already have an account? <a href="login.html" class="text-success">Login</a></p>
-                </div>
-            </div>
-        </div>
-    </div>
+		<div class="container d-flex align-items-center justify-content-center" style="min-height: 100vh;">
+			<div class="card shadow" style="width: 400px;">
+				<div class="card-body">
+					<h2 class="text-center mb-4 cinzel-heading">Create Your Account</h2>
+					<form id="createAccountForm">
+						<div class="mb-3">
+							<label for="newUsername" class="form-label">Username</label>
+							<input type="text" class="form-control" id="newUsername" required>
+						</div>
+						<div class="mb-3">
+							<label for="newPassword" class="form-label">Password</label>
+							<input type="password" class="form-control" id="newPassword" required>
+						</div>
+						<div class="mb-3">
+							<label for="confirmPassword" class="form-label">Confirm Password</label>
+							<input type="password" class="form-control" id="confirmPassword" required>
+						</div>
+						<button type="submit" class="btn btn-success w-100" id="createAccountBtn">Create Account</button>
+					</form>
+					<div class="text-center mt-3">
+						<p class="mb-0">Already have an account? <a href="login.html" class="text-success">Login</a></p>
+					</div>
+				</div>
+			</div>
+		</div>
 
-    <script src="../scripts/createAccountScript.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+		<script src="../scripts/createAccountScript.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
